--- a/app/src/main/res/layout/include_post_text.xml
+++ b/app/src/main/res/layout/include_post_text.xml
@@ -52,7 +52,6 @@
         android:id="@+id/post_body"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        tools:text="@string/lorem" />
+        android:layout_marginTop="5dp"/>
 
 </LinearLayout>
